[iOS] Move content below header the first time a WebState is activated.

This CL also renames UpdateFullscreenWebViewProxyForReplacedScrollView()
to MoveContentBelowHeader(), as it is used in additional places other
than just for replaced scroll views.

Bug: 769379
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I330e20e33501429140a8ea3dfd9e8afa34d47fcf
Reviewed-on: https://chromium-review.googlesource.com/933921
Commit-Queue: Kurt Horimoto <kkhorimoto@chromium.org>
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538925}